Fixed *Word splitting of scroller* Modified *Much better spacing algo using letter and word spacing* Modified *Removed all debug output*

--- a/css/scroller.css
+++ b/css/scroller.css
@@ -24,9 +24,14 @@ BODY {
 			Color: #FFF;
 }
 
+#log {
+	text-align: center;
+	width: 100%;
+}
+
 #ruler { 
 	visibility:hidden;
-	white-space: nowrap;
+	white-space: pre;
 	Font-Size:40px;
 	Margin: 0;
 	Text-Align: center;
@@ -57,6 +62,7 @@ BODY {
 	Height: 100%;
 	Margin: 0;
 	white-space: pre;
+	text-align: inherit;
 	Text-Shadow: 1px 1px 0px #000000;
 	-webkit-transform:translateX(100%);
 }
